# Library

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  instructions.md
include/: Book.h  Date.h  ISBN.h  ISBN10.h  Utility.h
src/: Book.cpp  Date.cpp  ISBN.cpp  ISBN10.cpp  Utility.cpp  main.cpp
